--- a/Project 3/report/Project3.tex
+++ b/Project 3/report/Project3.tex
@@ -151,23 +151,41 @@ Two different methods were implemented to calibrate pixel sizes in our images.
 
 The first method is manual. The user is presented with an image, and asked to crop out a section of it along the provided calibration bars. They are then asked to report how many bars wide the section they cropped is. The crop width is then matched with the bar spacing to report the size of each pixel in microns.
 
-The second method is automated. First, the Hough Transform of the image is taken, in the vertical direction, and edges of this transpose are found. Once these edges are found, we match the first bar to its neighbor. The distance between these neighbors is taken, and statistical outliers are removed between elements of each bar. Finally, the distance between these bars is used in tandem with the bar spacing to report the size of each pixel in microns.
+The second method is automated. First, the Hough Transform of the image is taken (Figure \ref{fig:houghT}), in the vertical direction, and edges of this transpose are found (Figure \ref{fig:autoCalib}). Once these edges are found, we match the first bar to its neighbor. The distance between these neighbors is taken, and statistical outliers are removed between elements of each bar. Finally, the distance between these bars is used in tandem with the bar spacing to report the size of each pixel in microns. 
 
-Below are the resulting pixel size calculations using each method, compared to the actual theoretical pixel size, assuming an optical pixel of \unit{650}{\nano\meter}:
+The resulting pixel size calculations using each method are given in table \ref{tab:calib}, compared to the actual theoretical pixel size, assuming an optical pixel of \unit{650}{\nano\meter}. The results largely agree with the theoretical calculation, and with each other. The one exception is the 10x zoom level. This automatic calculation is off by a factor of five. This is due to the Hough Transform bar identification. Every fifth bar is taller than the others, so a mis-detection occurs at this small zoom level that leads to an incorrect counting. On the other hand, if this is taken into account, the calibration method calculates a pixel size of \unit{650.5}{\nano\meter} that is only less than 1\% off of the theoretical pixel size at this zoom level. Therefore, the automatic calibration is accepted functioning correctly at this point.
 
+\begin{table}
+\caption{Calibration results for different magnification levels and comparison to theoretical pixel sizes}
+\label{tab:calib}
 \begin{center}
-\begin{tabular}{l | r | r | r}
+\begin{tabular}{l || r | r || r}
 % Caption on top
      Magnification & Manual ($\mu m$) & Automatic ($\mu m$) & Theoretical ($\mu m$) \\
      \hline\hline
      100$\times$                & 63.5            & 62.3               & 65.0 \\ \hline
      60$\times$                 & 107.0           & 115.0              & 108.3 \\ \hline
      20$\times$                 & 325.7           & 344.1              & 325.0 \\ \hline
-     10$\times$                 & 641.0           & 130.1              & 650.0
+     10$\times$                 & 641.0           & 130.1              & 650.0 
 \end{tabular}
 \end{center}
+\end{table}
 
-The results largely agree with the theoretical calculation, and with each other. The one exception is the 10x zoom level. This automatic calculation is off by a factor of five. This is due to the Hough Transform bar identification. Every fifth bar is taller than the others, so a mis-detection occurs at this small zoom level that leads to an incorrect counting.
+
+
+\begin{figure}
+\centering
+\includegraphics[width=0.75\linewidth]{figures/houghTrans.pdf}
+\caption{Hough Transform of the 60$\times$ zoomed in calibration image. The only outcome of this illustration is that the hot spots (white squares) correspond to the $(\theta, \rho)$ pairs of the detected edges. These hot spots are then transformed back into 2D image domain to point out detected edges.}
+\label{fig:houghT}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.75\linewidth]{figures/autocalibration.pdf}
+\caption{Detected edges in 60$\times$ zoomed in calibration image using Hough Transform, where green lines show edges, red crosses are edge start points and yellow crosses are edge ends.}
+\label{fig:autoCalib}
+\end{figure}
 
 
 \subsection*{B.5 Implementation of a directional anisotropic filter}
