--- a/Project 4/report/Project4.tex
+++ b/Project 4/report/Project4.tex
@@ -160,11 +160,110 @@ LLSS as an algorithm is very good at adjusting existing edges that are near actu
 
 
 
+
+
+
+
+
+
+
+
 \clearpage
 \section*{Part 2: Image segmentation using graph-cut and active contour}
 
 \subsection*{C.1.1 Graph cut based image segmentation}
 
+The general concept of using graph cuts for image segmentation is to use a weighed graph to represent the entire image, such that each vertex represents one pixel of the image, and each edge's weight is a scalar that is a function of some factor of similarity between the two vertices. If the image is partitioned into two whole segments, then a graph cut for that partionining is defined as the sum of weights between every combination of pairs of vertices between the two regions, as shown in equation \ref{eq:graph_cut}.
+
+\begin{equation}
+cut(A,B) = \sum_{u\in A,v\in B} w(u,v)
+\label{eq:graph_cut}
+\end{equation}
+...such that $A$ and $B$ are the set of vertices in their respective regions of the given image, and the function $w(u,v)$ is the weight between vertices $u,v$.
+
+Typically, the ideal partioning into regions $A$ and $B$ is one that minimizes the cut, so the two regions are as distinguishable as possible from each other, implying good segmentation (this is called finding the minimum-cut). There are other methods of taking advantage of graph cuts, or uses a similar idea, however. Two such methods are normalized cuts and non-convex.
+
+
+
+\subsubsection*{Normalized Cuts in Image Segmentation}
+
+Rather than calculating and using equation \ref{eq:graph_cut}, Shi and Malik formulated the normalized cut (or N-cut), which "computes the cut cost as a fraction of the total edge connections to all the nodes in the graph" \cite{ncut}. The normalized cut formula for dissociation is given below in equation \ref{eq:norm_cut1}: \cite{ncut}
+
+\begin{equation}
+Ncut(A,B) = \frac{cut(A,B)}{assoc(A,V)} + \frac{cut(A,B)}{assoc(B,V)}
+\label{eq:norm_cut1}
+\end{equation}
+
+where $assoc(A,V) = \sum_{u\in A, t\in V} w(u,t)$, or the "graph cut" between region $A$ and the entire graph itself; the idea behind this is to perform segmentation based off of not only each partition's relationship with each other, but also relationship to the entire image \cite{ncut}. The normalization cut addresses the issue with the minimization cut in equation \ref{eq:graph_cut} where it favors partitioning out sets of isolated vertices.
+
+The normalized cuts algorithm also calculates the total normalized association within the partitions themselves, which is given in equation \ref{eq:norm_cut2}: \cite{ncut}
+
+\begin{equation}
+Nassoc(A,B) = \frac{assoc(A,A)}{assoc(A,V)} + \frac{assoc(B,B)}{assoc(B,V)}
+\label{eq:norm_cut2}
+\end{equation}
+
+The association and dissociation in equations \ref{eq:norm_cut1} and \ref{eq:norm_cut2} are also directly related: \cite{ncut}
+
+\begin{equation}
+Ncut(A,B) = 2 - Nassoc(A,B)
+\end{equation}
+
+This relationship makes the partitioning criteria more trivial, as maximizing one minimizes the other. For an ideal segmentation with the N-cut algorithm, the dissociation in equation \ref{eq:norm_cut1} should be maximized and the association in equation \ref{eq:norm_cut2} should be minimized.
+
+
+Examples of N-Cut Image Segmentation on the two static sample images are shown in figures \ref{fig:gc1_1} and \ref{fig:gc1_2}. The code used to run this algorithm on these images are from reference \cite{ncut_code}
+
+\pagebreak
+\begin{figure}
+\centering
+\includegraphics[width=0.5\textwidth]{figures/60x_02_gc1.pdf}
+\caption{60x\_02 segmentation using N-Cut Image Segmetation}
+\label{fig:gc1_1}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.5\textwidth]{figures/Blue0001_gc1.pdf}
+\caption{Blue0001 segmentation using N-Cut Image Segmetation}
+\label{fig:gc1_2}
+\end{figure}
+
+
+
+
+
+
+\pagebreak
+\subsubsection*{Convex Multiphase Image Segmentation with Graph Cut}
+
+The image segmentation algorithm used by \cite{jun} is a graph cut algorithm that 
+
+Results for the initial two images are in figures \ref{fig:gc2_1} and \ref{fig:gc2_2}.
+
+\pagebreak
+\begin{figure}
+\centering
+\includegraphics[width=0.5\textwidth]{figures/60x_02_gc2.png}
+\caption{60x\_02 segmentation using Multiphase Image Segmetation}
+\label{fig:gc2_1}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.5\textwidth]{figures/Blue0001_gc2.png}
+\caption{Blue0001 segmentation using Multiphase Image Segmetation}
+\label{fig:gc2_2}
+\end{figure}
+
+
+
+
+
+
+
+
+\pagebreak
 \subsection*{C.1.2 Active contour based image segmentation}
 Active contours, or \emph{snakes}, are quite useful for finding object boundaries in an image. The initial contours are evolving due to the internal forces, that are elasticity forces, holding the curve together, and bending forces, controlling stiffness of the curve, and external forces, that are potential forces due to image gradients and pressure forces. Reference \cite{gvf} indicates that there are 2 main challenges in active contour based image segmentation:
 \begin{itemize}
@@ -172,7 +271,6 @@ Active contours, or \emph{snakes}, are quite useful for finding object boundarie
 \item It is generally hard to penetrate into concave regions.
 \end{itemize}
 In this project, Gradient Vector Flow Segmentation (GVF) \cite{gvf} and Distance Regularized Level Set Evolution (DRLSE) Segmentation \cite{drlse} are examined and applied to the current sample images, in order to exemplify the functionality and challenges in active contour based image segmentation. In the following, the results and the implementation of each algorithm will be discussed, however, the technical background will be given in section C.1.3. 
-
 
 
 \subsubsection*{Gradient Vector Flow Segmentation}
@@ -320,6 +418,9 @@ The DRLSE algorithm is quite powerful as it provides flexibility in segmenting s
 \fontsize{10pt}{12pt}\selectfont
 \raggedright
 
+    \bibitem{ncut_code}
+        Cour, T., Yu, S., \& Shi, J. (2010, January 22). demo2. \emph{demo2}. Retrieved April 29, 2014, from http://www.timotheecour.com/software/ncut/ncut.html
+
     \bibitem{designest}
         ``MATITK: Additional documentation''.
         \emph{designest}.
@@ -330,6 +431,12 @@ The DRLSE algorithm is quite powerful as it provides flexibility in segmenting s
         ``A Lagrangian particle level set method''.
         Institute of Computational Science, ETH Zürich.
         \emph{Journal of Computational Physics}, 2005, 342-367.
+
+    \bibitem{jun}
+        June Liu, Xue-Cheng Tai, Shingyu Leung. A Generic Convexication and Graph Cut Method for Multiphase Image Segmentation. Energy Minimization Methods in Computer vision and Pattern Recognition Lecture Notes in Computer Science. (2013) 8081:251-265.
+
+    \bibitem{ncut}
+        Jianbo Shi and Jitendra Malik. 2000. Normalized Cuts and Image Segmentation. \emph{IEEE Trans. Pattern Anal. Mach. Intell.} 22, 8 (August 2000), 888-905.
 
     \bibitem{osher}
         Osher, Stanley, and Nikos Paragios, eds. 
